objects/Training_Events__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Training Events</relationshipLabel>
        <relationshipName>Training_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Attendance__c</fullName>
        <label>Actual Attendance</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_of_Students__c</fullName>
        <label>Actual # of Students</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alterations_to_skills_due_to_state_local__c</fullName>
        <label>Alterations to skills due to state/local</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Announced_to_Management__c</fullName>
        <label>Announced to Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGST_Indicator__c</fullName>
        <formula>Opportunity__r.BGST_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BGST Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGST_Rep_Email__c</fullName>
        <formula>Opportunity__r.BGST_Rep_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BGST Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_As__c</fullName>
        <label>Billed As:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Service</fullName>
                </value>
                <value>
                    <fullName>Per Agreement</fullName>
                </value>
                <value>
                    <fullName>Per Agreement, Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Training Event (Multi-Jurisdictional Account)</relationshipLabel>
        <relationshipName>Training_Event1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Break_Times__c</fullName>
        <label>Break Times</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10m</fullName>
                </value>
                <value>
                    <fullName>15m</fullName>
                </value>
                <value>
                    <fullName>20m</fullName>
                </value>
                <value>
                    <fullName>30m</fullName>
                </value>
                <value>
                    <fullName>40m</fullName>
                </value>
                <value>
                    <fullName>45m</fullName>
                </value>
                <value>
                    <fullName>50m</fullName>
                </value>
                <value>
                    <fullName>60m</fullName>
                </value>
                <value>
                    <fullName>70m</fullName>
                </value>
                <value>
                    <fullName>75m</fullName>
                </value>
                <value>
                    <fullName>80m</fullName>
                </value>
                <value>
                    <fullName>90m</fullName>
                </value>
                <value>
                    <fullName>100m</fullName>
                </value>
                <value>
                    <fullName>105m</fullName>
                </value>
                <value>
                    <fullName>110m</fullName>
                </value>
                <value>
                    <fullName>120m</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CC_Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>CC Order Item Related to the TE</inlineHelpText>
        <label>CC Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>Training Event</relationshipLabel>
        <relationshipName>Training_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>CC Order related to TE</inlineHelpText>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>Training Event</relationshipLabel>
        <relationshipName>Training_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRS__c</fullName>
        <label>CRS #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champs_Set_up_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In CHAMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date_to_Scheduled__c</fullName>
        <formula>(Completed_Date__c -    Opportunity__r.Closed_Won_Date__c   )*24</formula>
        <label>Close Date to Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date_to_TE__c</fullName>
        <formula>Start_Date__c-Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date to TE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Date__c</fullName>
        <formula>Opportunity__r.Closed_Won_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Won Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Combined_Event__c</fullName>
        <label>Combined Event?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes – In-service</fullName>
                </value>
                <value>
                    <fullName>Yes – EAP Drill</fullName>
                </value>
                <value>
                    <fullName>Yes – Multiple services</fullName>
                </value>
                <value>
                    <fullName>Yes – Other, see special instructions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Event1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Catalog</label>
        <referenceTo>Course_Catalog__c</referenceTo>
        <relationshipLabel>Training Event</relationshipLabel>
        <relationshipName>Training_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_ID_1__c</fullName>
        <formula>CC_Order_Item__r.ccrz__Product__r.ccrz__SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_ID__c</fullName>
        <inlineHelpText>HSSSFA107 - Adult CPR/AED
HSSFA207 - Pediatric CPR/AED:
HSSSFA303 - Adult and Pediatric CPR/AED
HSSSFA404 - Adult CPR/AED and First Aid
HSSSFA415 - Adult and Pediatric</inlineHelpText>
        <label>Course ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Order_Status__c</fullName>
        <description>Checks the Status of the Order before setting the TE Status</description>
        <inlineHelpText>DO NOT TOUCH</inlineHelpText>
        <label>Order Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                    <default>true</default>
                    <label>Schedule</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                    <isActive>false</isActive>
                    <label>Submitted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Record_Processed_Date__c</fullName>
        <label>Course Record Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Notes__c</fullName>
        <label>Customer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Processed__c</fullName>
        <label>Date Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_TE_creation__c</fullName>
        <description>Used instead of standard Date/Time &quot;Created Date&quot; field</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of TE creation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Training Event</relationshipLabel>
        <relationshipName>Training_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>08:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:15 AM</fullName>
                </value>
                <value>
                    <fullName>08:30 AM</fullName>
                </value>
                <value>
                    <fullName>08:45 AM</fullName>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>09:15 AM</fullName>
                </value>
                <value>
                    <fullName>09:30 AM</fullName>
                </value>
                <value>
                    <fullName>09:45 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:15 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:45 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:15 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:45 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>01:00 PM</fullName>
                </value>
                <value>
                    <fullName>01:15 PM</fullName>
                </value>
                <value>
                    <fullName>01:30 PM</fullName>
                </value>
                <value>
                    <fullName>01:45 PM</fullName>
                </value>
                <value>
                    <fullName>02:00 PM</fullName>
                </value>
                <value>
                    <fullName>02:15 PM</fullName>
                </value>
                <value>
                    <fullName>02:30 PM</fullName>
                </value>
                <value>
                    <fullName>02:45 PM</fullName>
                </value>
                <value>
                    <fullName>03:00 PM</fullName>
                </value>
                <value>
                    <fullName>03:15 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entry_Method__c</fullName>
        <label>Entry Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pool pass provided</fullName>
                </value>
                <value>
                    <fullName>Pay cash – client reimbursement</fullName>
                </value>
                <value>
                    <fullName>Pay cash – no client reimbursement</fullName>
                </value>
                <value>
                    <fullName>Other – see special instructions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DVD and TV on site</fullName>
                </value>
                <value>
                    <fullName>AV Equipment and Computer On Site</fullName>
                </value>
                <value>
                    <fullName>AV Equipment with Computer Hookup</fullName>
                </value>
                <value>
                    <fullName>TV Only no computer hookup</fullName>
                </value>
                <value>
                    <fullName>No AV Equipment on site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Training_Event_Amount__c</fullName>
        <formula>Number_in_Class__c * Opportunity__r.Est_Price_per_Attendee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. Training Event Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Address_1__c</fullName>
        <label>Facility Address 1</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Address_2__c</fullName>
        <label>Facility Address 2</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_City__c</fullName>
        <label>Facility City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Name</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Training Event</relationshipLabel>
        <relationshipName>Training_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_State__c</fullName>
        <label>Facility State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waterpark</fullName>
                </value>
                <value>
                    <fullName>Waterfront</fullName>
                </value>
                <value>
                    <fullName>Pool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_Zip__c</fullName>
        <label>Facility Zip</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Service__c</fullName>
        <label>Final Service?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Discussion_Customer_Hold_Date__c</fullName>
        <label>In Discussion - Customer Hold Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Discussion_Scheduling_Date__c</fullName>
        <label>In Discussion - Scheduling Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Instructor_1__c</fullName>
        <label>Instructor 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Completed_Date_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To prevent Updating Completed Date more than one time.</description>
        <label>Is Completed Date Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMS_Org_ID__c</fullName>
        <formula>Opportunity__r.LMS_Org_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMS Org ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Date_for_a_Site_Visit__c</fullName>
        <label>Last Date for a Site Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Course_Catalog_Students__c</fullName>
        <formula>IF
(Number_of_Instructors__c&lt;=0,
Course_Catalog__r.Number_of_Students__c,
Number_of_Instructors__c*Course_Catalog__r.Number_of_Students__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Max number of students based on Course Catalog and Number of Instructors on TE</inlineHelpText>
        <label>Max Course Catalog Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multi_Jurisdictional_Local_Billing_Type__c</fullName>
        <formula>IF(AND(
 ISPICKVAL(Opportunity__r.Multi_Jurisdictional__c , &apos;Yes&apos;),
 OR(
 ISPICKVAL(Opportunity__r.Multi_Jurisdictional_Type__c, &apos;Single POC, Local Billing&apos; ),
 ISPICKVAL(Opportunity__r.Multi_Jurisdictional_Type__c, &apos;Local POC, Local Billing&apos;))), IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;,15,15), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green&quot;,15,15) )</formula>
        <inlineHelpText>If Flag is red, please Verify Local Billing Account</inlineHelpText>
        <label>Multi-Jurisdictional Local Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_in_Class__c</fullName>
        <label>Number in Class</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Examiners__c</fullName>
        <label>Number of Examiners</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Instructors__c</fullName>
        <label>Number of Instructors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Training Event</relationshipLabel>
        <relationshipName>Training_Event</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_1__c</fullName>
        <description>Quantity of Classes that have been ordered</description>
        <inlineHelpText>Quantity of Classes that have been ordered</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <formula>Opportunity__r.TotalOpportunityQuantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>sked__Region__c</referenceTo>
        <relationshipLabel>Training Event</relationshipLabel>
        <relationshipName>Training_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Sent_Date__c</fullName>
        <label>Report Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rescheduling_Date__c</fullName>
        <label>Rescheduling Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rescheduling_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rescheduling Fee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCC_Code__c</fullName>
        <label>SCC Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saba_Order__c</fullName>
        <label>Saba Order #</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheduling_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduling Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduling_Status__c</fullName>
        <label>Scheduling Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Course_Order_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Contacting</fullName>
                    <default>true</default>
                    <label>Contacting</label>
                </value>
                <value>
                    <fullName>In-Discussion</fullName>
                </value>
                <value>
                    <fullName>In Discussion - Customer Hold</fullName>
                </value>
                <value>
                    <fullName>In Discussion - Scheduling</fullName>
                </value>
                <value>
                    <fullName>Sent Addendum</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rescheduling</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Course Record Processed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sent_Addendum_Date__c</fullName>
        <label>Sent Addendum Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Delivery_Territory__c</fullName>
        <label>Service Delivery Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AES/AQU/Academy</fullName>
                </value>
                <value>
                    <fullName>Central Mid-West</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Keystone</fullName>
                </value>
                <value>
                    <fullName>Lone Star</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>Mid-South</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>NY Metro</fullName>
                </value>
                <value>
                    <fullName>Pacific Northwest</fullName>
                </value>
                <value>
                    <fullName>Pacific South</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>Upper Mid-West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skills_Evaluation__c</fullName>
        <label>Skills Evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Examiners</fullName>
                </value>
                <value>
                    <fullName>Facility Managers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>08:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:15 AM</fullName>
                </value>
                <value>
                    <fullName>08:30 AM</fullName>
                </value>
                <value>
                    <fullName>08:45 AM</fullName>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>09:15 AM</fullName>
                </value>
                <value>
                    <fullName>09:30 AM</fullName>
                </value>
                <value>
                    <fullName>09:45 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:15 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:45 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:15 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:45 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:15 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>12:45 PM</fullName>
                </value>
                <value>
                    <fullName>01:00 PM</fullName>
                </value>
                <value>
                    <fullName>01:15 PM</fullName>
                </value>
                <value>
                    <fullName>01:30 PM</fullName>
                </value>
                <value>
                    <fullName>01:45 PM</fullName>
                </value>
                <value>
                    <fullName>02:00 PM</fullName>
                </value>
                <value>
                    <fullName>02:15 PM</fullName>
                </value>
                <value>
                    <fullName>02:30 PM</fullName>
                </value>
                <value>
                    <fullName>02:45 PM</fullName>
                </value>
                <value>
                    <fullName>03:00 PM</fullName>
                </value>
                <value>
                    <fullName>03:15 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supp_Info__c</fullName>
        <inlineHelpText>For Accounts that require Supplemental Information to be included on their Invoice, provide details here.</inlineHelpText>
        <label>Supp Info</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Owner_Email__c</fullName>
        <formula>TE_Owner__r.Email</formula>
        <label>TE Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Owner_Manager__c</fullName>
        <formula>TE_Owner__r.Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Owner_Phone_Ext__c</fullName>
        <formula>TE_Owner__r.Extension</formula>
        <label>TE Owner Phone Ext</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Owner_Phone__c</fullName>
        <formula>TE_Owner__r.Phone</formula>
        <label>TE Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Owner_Title__c</fullName>
        <formula>TE_Owner__r.Title</formula>
        <label>TE Owner Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup field for the owner of the Training Event. It will be used to connect the other TE Owner-related fields, such as TE Owner Email, TE Owner Phone, etc.</description>
        <label>TE Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Event</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>